--- a/惊喜1.html
+++ b/惊喜1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>曼宝抽奖轮盘</title>
+    <title>曼宝抽奖轮盘一周年限定版！</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -740,4 +740,5 @@
         });
     </script>
 </body>
+
 </html>
