--- a/TSG.html
+++ b/TSG.html
@@ -750,10 +750,10 @@
                         </div>
                         <div class="player-info">
                             <div class="player-role">上单 (TOP)</div>
-                            <div class="player-name">揽月庞</div>
+                            <div class="player-name">月色血风暴</div>
                             <div class="player-rank">
                                 <i class="fas fa-star"></i>
-                                最强王者 876点
+                                最强王者 3000点
                             </div>
                         </div>
                     </div>
@@ -803,7 +803,7 @@
                             <div class="player-name">Jun</div>
                             <div class="player-rank">
                                 <i class="fas fa-star"></i>
-                                最强王者 921点
+                                最强王者 999点
                             </div>
                         </div>
                     </div>
@@ -850,10 +850,10 @@
                         </div>
                         <div class="player-info">
                             <div class="player-role">中单 (MID)</div>
-                            <div class="player-name">小涛</div>
+                            <div class="player-name">惊天浪涛沙</div>
                             <div class="player-rank">
                                 <i class="fas fa-star"></i>
-                                最强王者 1045点
+                                最强王者 2000点
                             </div>
                         </div>
                     </div>
@@ -903,7 +903,7 @@
                             <div class="player-name">维密收藏家</div>
                             <div class="player-rank">
                                 <i class="fas fa-star"></i>
-                                最强王者 812点
+                                最强王者 1000点
                             </div>
                         </div>
                     </div>
@@ -950,10 +950,10 @@
                         </div>
                         <div class="player-info">
                             <div class="player-role">辅助 (SUP)</div>
-                            <div class="player-name">Auckland</div>
+                            <div class="player-name">流影电光闪</div>
                             <div class="player-rank">
                                 <i class="fas fa-star"></i>
-                                最强王者 765点
+                                最强王者 1200点
                             </div>
                         </div>
                     </div>
@@ -1003,7 +1003,7 @@
                         <img class="summoner-avatar" src="https://scholesj-7.github.io/mzsy.png" alt="教练头像">
                     </div>
                     <div class="coach-info">
-                        <div class="coach-name">战术大师</div>
+                        <div class="coach-name">幽冥吸波功</div>
                         <div class="coach-role">主教练</div>
                         <div class="player-rank">
                             <i class="fas fa-star"></i>
@@ -1021,7 +1021,7 @@
                         <div class="stat-label">比赛胜率</div>
                     </div>
                     <div class="stat">
-                        <div class="stat-value">3</div>
+                        <div class="stat-value">1</div>
                         <div class="stat-label">冠军头衔</div>
                     </div>
                     <div class="stat">
@@ -1037,14 +1037,13 @@
             <div class="info-card">
                 <h3><i class="fas fa-trophy"></i> 战队荣誉</h3>
                 <ul class="achievement-list">
-                    <li><i class="fas fa-award"></i> 2023年 英雄联盟城市争霸赛 冠军</li>
-                    <li><i class="fas fa-award"></i> 2022年 全国高校电竞联赛 亚军</li>
-                    <li><i class="fas fa-award"></i> 2022年 西南地区电竞邀请赛 冠军</li>
-                    <li><i class="fas fa-award"></i> 2021年 新生杯电竞大赛 冠军</li>
-                    <li><i class="fas fa-award"></i> 2021年 最佳新秀战队奖</li>
+                    <li><i class="fas fa-award"></i> 2020年 英雄联盟绵实冠军杯 冠军</li>
+                    <li><i class="fas fa-award"></i> 2021年 英雄联盟艾欧尼亚冠军杯 五强</li>
+                    <li><i class="fas fa-award"></i> 2022年 英雄联盟德玛西亚冠军杯 八强</li>
                 </ul>
             </div>
             
             <div class="info-card">
                 <h3><i class="fas fa-users"></i> 战队简介</h3>
-                <p>绵实TSG战队成立于2020年，是一支充满活力与潜力的英雄联盟职业战队。
+                <p>绵实TSG战队成立于2021年，是一支充满活力与潜力的英雄联盟职业战队。
+
